shared/newton_dynamics/newton.odin


    @(link_name="NewtonBodySetForceAndTorqueCallback")
    NewtonBodySetForceAndTorqueCallback :: proc(body : ^NewtonBody, callback : NewtonApplyForceAndTorque) ---

    @(link_name="NewtonBodyGetForceAndTorqueCallback")
    NewtonBodyGetForceAndTorqueCallback :: proc(body : ^NewtonBody) -> NewtonApplyForceAndTorque ---

    @(link_name="NewtonBodyGetID")
    NewtonBodyGetID :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodySetUserData")
    NewtonBodySetUserData :: proc(body : ^NewtonBody, userData : rawptr) ---

    @(link_name="NewtonBodyGetUserData")
    NewtonBodyGetUserData :: proc(body : ^NewtonBody) -> rawptr ---

    @(link_name="NewtonBodyGetWorld")
    NewtonBodyGetWorld :: proc(body : ^NewtonBody) -> ^NewtonWorld ---

    @(link_name="NewtonBodyGetCollision")
    NewtonBodyGetCollision :: proc(body : ^NewtonBody) -> ^NewtonCollision ---

    @(link_name="NewtonBodyGetMaterialGroupID")
    NewtonBodyGetMaterialGroupID :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodyGetSerializedID")
    NewtonBodyGetSerializedID :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodyGetContinuousCollisionMode")
    NewtonBodyGetContinuousCollisionMode :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodyGetJointRecursiveCollision")
    NewtonBodyGetJointRecursiveCollision :: proc(body : ^NewtonBody) -> i32 ---

    @(link_name="NewtonBodyGetPosition")
    NewtonBodyGetPosition :: proc(body : ^NewtonBody, pos : ^dFloat) ---

    @(link_name="NewtonBodyGetMatrix")
    NewtonBodyGetMatrix :: proc(body : ^NewtonBody, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonBodyGetRotation")
    NewtonBodyGetRotation :: proc(body : ^NewtonBody, rotation : ^dFloat) ---

    @(link_name="NewtonBodyGetMass")
    NewtonBodyGetMass :: proc(body : ^NewtonBody, mass : ^dFloat, Ixx : ^dFloat, Iyy : ^dFloat, Izz : ^dFloat) ---

    @(link_name="NewtonBodyGetInvMass")
    NewtonBodyGetInvMass :: proc(body : ^NewtonBody, invMass : ^dFloat, invIxx : ^dFloat, invIyy : ^dFloat, invIzz : ^dFloat) ---

    @(link_name="NewtonBodyGetInertiaMatrix")
    NewtonBodyGetInertiaMatrix :: proc(body : ^NewtonBody, inertiaMatrix : ^dFloat) ---

    @(link_name="NewtonBodyGetInvInertiaMatrix")
    NewtonBodyGetInvInertiaMatrix :: proc(body : ^NewtonBody, invInertiaMatrix : ^dFloat) ---

    @(link_name="NewtonBodyGetOmega")
    NewtonBodyGetOmega :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetVelocity")
    NewtonBodyGetVelocity :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetAlpha")
    NewtonBodyGetAlpha :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetAcceleration")
    NewtonBodyGetAcceleration :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetForce")
    NewtonBodyGetForce :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetTorque")
    NewtonBodyGetTorque :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetCentreOfMass")
    NewtonBodyGetCentreOfMass :: proc(body : ^NewtonBody, com : ^dFloat) ---

    @(link_name="NewtonBodyGetPointVelocity")
    NewtonBodyGetPointVelocity :: proc(body : ^NewtonBody, point : ^dFloat, velocOut : ^dFloat) ---

    @(link_name="NewtonBodyApplyImpulsePair")
    NewtonBodyApplyImpulsePair :: proc(body : ^NewtonBody, linearImpulse : ^dFloat, angularImpulse : ^dFloat, timestep : dFloat) ---

    @(link_name="NewtonBodyAddImpulse")
    NewtonBodyAddImpulse :: proc(body : ^NewtonBody, pointDeltaVeloc : ^dFloat, pointPosit : ^dFloat, timestep : dFloat) ---

    @(link_name="NewtonBodyApplyImpulseArray")
    NewtonBodyApplyImpulseArray :: proc(body : ^NewtonBody, impuleCount : i32, strideInByte : i32, impulseArray : ^dFloat, pointArray : ^dFloat, timestep : dFloat) ---

    @(link_name="NewtonBodyIntegrateVelocity")
    NewtonBodyIntegrateVelocity :: proc(body : ^NewtonBody, timestep : dFloat) ---

    @(link_name="NewtonBodyGetLinearDamping")
    NewtonBodyGetLinearDamping :: proc(body : ^NewtonBody) -> dFloat ---

    @(link_name="NewtonBodyGetAngularDamping")
    NewtonBodyGetAngularDamping :: proc(body : ^NewtonBody, vector : ^dFloat) ---

    @(link_name="NewtonBodyGetAABB")
    NewtonBodyGetAABB :: proc(body : ^NewtonBody, p0 : ^dFloat, p1 : ^dFloat) ---

    @(link_name="NewtonBodyGetFirstJoint")
    NewtonBodyGetFirstJoint :: proc(body : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonBodyGetNextJoint")
    NewtonBodyGetNextJoint :: proc(body : ^NewtonBody, joint : ^NewtonJoint) -> ^NewtonJoint ---

    @(link_name="NewtonBodyGetFirstContactJoint")
    NewtonBodyGetFirstContactJoint :: proc(body : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonBodyGetNextContactJoint")
    NewtonBodyGetNextContactJoint :: proc(body : ^NewtonBody, contactJoint : ^NewtonJoint) -> ^NewtonJoint ---

    @(link_name="NewtonBodyFindContact")
    NewtonBodyFindContact :: proc(body0 : ^NewtonBody, body1 : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonContactJointGetFirstContact")
    NewtonContactJointGetFirstContact :: proc(contactJoint : ^NewtonJoint) -> rawptr ---

    @(link_name="NewtonContactJointGetNextContact")
    NewtonContactJointGetNextContact :: proc(contactJoint : ^NewtonJoint, contact : rawptr) -> rawptr ---

    @(link_name="NewtonContactJointGetContactCount")
    NewtonContactJointGetContactCount :: proc(contactJoint : ^NewtonJoint) -> i32 ---

    @(link_name="NewtonContactJointRemoveContact")
    NewtonContactJointRemoveContact :: proc(contactJoint : ^NewtonJoint, contact : rawptr) ---

    @(link_name="NewtonContactJointGetClosestDistance")
    NewtonContactJointGetClosestDistance :: proc(contactJoint : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonContactJointResetSelftJointCollision")
    NewtonContactJointResetSelftJointCollision :: proc(contactJoint : ^NewtonJoint) ---

    @(link_name="NewtonContactJointResetIntraJointCollision")
    NewtonContactJointResetIntraJointCollision :: proc(contactJoint : ^NewtonJoint) ---

    @(link_name="NewtonContactGetMaterial")
    NewtonContactGetMaterial :: proc(contact : rawptr) -> ^NewtonMaterial ---

    @(link_name="NewtonContactGetCollision0")
    NewtonContactGetCollision0 :: proc(contact : rawptr) -> ^NewtonCollision ---

    @(link_name="NewtonContactGetCollision1")
    NewtonContactGetCollision1 :: proc(contact : rawptr) -> ^NewtonCollision ---

    @(link_name="NewtonContactGetCollisionID0")
    NewtonContactGetCollisionID0 :: proc(contact : rawptr) -> rawptr ---

    @(link_name="NewtonContactGetCollisionID1")
    NewtonContactGetCollisionID1 :: proc(contact : rawptr) -> rawptr ---

    @(link_name="NewtonJointGetUserData")
    NewtonJointGetUserData :: proc(joint : ^NewtonJoint) -> rawptr ---

    @(link_name="NewtonJointSetUserData")
    NewtonJointSetUserData :: proc(joint : ^NewtonJoint, userData : rawptr) ---

    @(link_name="NewtonJointGetBody0")
    NewtonJointGetBody0 :: proc(joint : ^NewtonJoint) -> ^NewtonBody ---

    @(link_name="NewtonJointGetBody1")
    NewtonJointGetBody1 :: proc(joint : ^NewtonJoint) -> ^NewtonBody ---

    @(link_name="NewtonJointGetInfo")
    NewtonJointGetInfo :: proc(joint : ^NewtonJoint, info : ^NewtonJointRecord) ---

    @(link_name="NewtonJointGetCollisionState")
    NewtonJointGetCollisionState :: proc(joint : ^NewtonJoint) -> i32 ---

    @(link_name="NewtonJointSetCollisionState")
    NewtonJointSetCollisionState :: proc(joint : ^NewtonJoint, state : i32) ---

    @(link_name="NewtonJointGetStiffness")
    NewtonJointGetStiffness :: proc(joint : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonJointSetStiffness")
    NewtonJointSetStiffness :: proc(joint : ^NewtonJoint, state : dFloat) ---

    @(link_name="NewtonDestroyJoint")
    NewtonDestroyJoint :: proc(newtonWorld : ^NewtonWorld, joint : ^NewtonJoint) ---

    @(link_name="NewtonJointSetDestructor")
    NewtonJointSetDestructor :: proc(joint : ^NewtonJoint, destructor : NewtonConstraintDestructor) ---

    @(link_name="NewtonJointIsActive")
    NewtonJointIsActive :: proc(joint : ^NewtonJoint) -> i32 ---

    @(link_name="NewtonCreateMassSpringDamperSystem")
    NewtonCreateMassSpringDamperSystem :: proc(newtonWorld : ^NewtonWorld, shapeID : i32, points : ^dFloat, pointCount : i32, strideInBytes : i32, pointMass : ^dFloat, links : ^i32, linksCount : i32, linksSpring : ^dFloat, linksDamper : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateDeformableSolid")
    NewtonCreateDeformableSolid :: proc(newtonWorld : ^NewtonWorld, mesh : ^NewtonMesh, shapeID : i32) -> ^NewtonCollision ---

    @(link_name="NewtonDeformableMeshGetParticleCount")
    NewtonDeformableMeshGetParticleCount :: proc(deformableMesh : ^NewtonCollision) -> i32 ---

    @(link_name="NewtonDeformableMeshGetParticleStrideInBytes")
    NewtonDeformableMeshGetParticleStrideInBytes :: proc(deformableMesh : ^NewtonCollision) -> i32 ---

    @(link_name="NewtonDeformableMeshGetParticleArray")
    NewtonDeformableMeshGetParticleArray :: proc(deformableMesh : ^NewtonCollision) -> ^dFloat ---

    @(link_name="NewtonConstraintCreateBall")
    NewtonConstraintCreateBall :: proc(newtonWorld : ^NewtonWorld, pivotPoint : ^dFloat, childBody : ^NewtonBody, parentBody : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonBallSetUserCallback")
    NewtonBallSetUserCallback :: proc(ball : ^NewtonJoint, callback : NewtonBallCallback) ---

    @(link_name="NewtonBallGetJointAngle")
    NewtonBallGetJointAngle :: proc(ball : ^NewtonJoint, angle : ^dFloat) ---

    @(link_name="NewtonBallGetJointOmega")
    NewtonBallGetJointOmega :: proc(ball : ^NewtonJoint, omega : ^dFloat) ---

    @(link_name="NewtonBallGetJointForce")
    NewtonBallGetJointForce :: proc(ball : ^NewtonJoint, force : ^dFloat) ---

    @(link_name="NewtonBallSetConeLimits")
    NewtonBallSetConeLimits :: proc(ball : ^NewtonJoint, pin : ^dFloat, maxConeAngle : dFloat, maxTwistAngle : dFloat) ---

    @(link_name="NewtonConstraintCreateHinge")
    NewtonConstraintCreateHinge :: proc(newtonWorld : ^NewtonWorld, pivotPoint : ^dFloat, pinDir : ^dFloat, childBody : ^NewtonBody, parentBody : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonHingeSetUserCallback")
    NewtonHingeSetUserCallback :: proc(hinge : ^NewtonJoint, callback : NewtonHingeCallback) ---

    @(link_name="NewtonHingeGetJointAngle")
    NewtonHingeGetJointAngle :: proc(hinge : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonHingeGetJointOmega")
    NewtonHingeGetJointOmega :: proc(hinge : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonHingeGetJointForce")
    NewtonHingeGetJointForce :: proc(hinge : ^NewtonJoint, force : ^dFloat) ---

    @(link_name="NewtonHingeCalculateStopAlpha")
    NewtonHingeCalculateStopAlpha :: proc(hinge : ^NewtonJoint, desc : ^NewtonHingeSliderUpdateDesc, angle : dFloat) -> dFloat ---

    @(link_name="NewtonConstraintCreateSlider")
    NewtonConstraintCreateSlider :: proc(newtonWorld : ^NewtonWorld, pivotPoint : ^dFloat, pinDir : ^dFloat, childBody : ^NewtonBody, parentBody : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonSliderSetUserCallback")
    NewtonSliderSetUserCallback :: proc(slider : ^NewtonJoint, callback : NewtonSliderCallback) ---

    @(link_name="NewtonSliderGetJointPosit")
    NewtonSliderGetJointPosit :: proc(slider : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonSliderGetJointVeloc")
    NewtonSliderGetJointVeloc :: proc(slider : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonSliderGetJointForce")
    NewtonSliderGetJointForce :: proc(slider : ^NewtonJoint, force : ^dFloat) ---

    @(link_name="NewtonSliderCalculateStopAccel")
    NewtonSliderCalculateStopAccel :: proc(slider : ^NewtonJoint, desc : ^NewtonHingeSliderUpdateDesc, position : dFloat) -> dFloat ---
